--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4.0",
+        "spatie/laravel-permission": "^2.33"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -33,7 +35,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Core\\": "core/"
         },
         "classmap": [
             "database/seeds",
